# heart-disease-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: end-to-end-heart-disease-classification.ipynb
